# NEAR-Innovation-Sandbox-2026

./: .gitignore  HACKATHON.md  README.md  governance-agent-demo.html
contracts/rust/: Cargo.toml
contracts/rust/src/: lib.rs
docs/: ARCHITECTURE.md  LOCAL-FIRST.md  PARALLEL-SOCIETY.md  SPONSOR-INTEGRATIONS.md
frontend/: .env.example  README.md  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/verify/: route.ts
